--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ html {
     height: 100%;
     z-index: 0;
     /* Boost brightness and saturation to make the neon walls pop in the blur */
-    /*filter: blur(40px) brightness(3.0) saturate(200%);*/
+    /* Filter is now applied in JS to the small texture for performance */
     opacity: 0.8;
 }
 
